2006-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/plot2d.c: Allow 2D plots to read color info from
	input column. Implemented for points and labels. SF Patch #1573026
	  plot ... with points linecolor rgb variable
	  plot ... with labels textcolor rgb variable
	
	* demo/rgb_variable.dem: Add 2D example plots.

2006-10-12  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: Small corrections.

	* term/post.trm (PS_encode_image): Added gamma correction for images
	using a PostScript transfer function. SF Patch [1575425].

2006-10-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm (SVG_put_text): Re-work this routine. Fix error
	in the escape codes generated for octal constants. Fix control flow
	for non-enhanced text strings.
	Bug #1575007

2006-10-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (test_palette_subcommand): Fixed order of set tics
	commands.

2006-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* m4/alpha.m4:  Have the new macro use __alpha as the basis for the
	test.  Checked on Digital Unix 4.0D and Tru64 V5.1

	* term/svg.trm (SVG_put_text): Fix bracket scope error introduced
	on 3 Oct.

2006-10-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* m4/alpha.m4: New macro GP_ALPHA.  Try to auto-detect if compiler
	targets DEC Alpha/AXP CPU.  If so, add -mieee or -ieee flag to
	CFLAGS to avoid FPU weirdness.

	* configure.in (GP_ALPHA): Call new macro.

2006-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.h src/gplt_x11.c term/x11.trm: Code cleanup.
	Assign separate protocol keys and disentangle the code supporting
	binary/ascii descriptions of color and polygons passed by the x11
	driver to gnuplot_x11.   Patchset #1549408

2006-10-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/term.c term/driver.h: Remove dead code and comments

2006-10-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
